crates/tree-sitter-rocket/grammar.js
    source_file: ($) =>
      seq(
        optional($.module_declaration),
        repeat($.import_statement),
        repeat($._declaration)
      ),

    // =========================================================================
    // Module system
    // =========================================================================

    _declaration: ($) =>
      choice(
        $.type_declaration,
        $.effect_declaration,
        $.function_declaration,
        $.spec_declaration
      ),

    // Type declarations
    type_declaration: ($) =>
      seq(
        optional("export"),
        "type",
        $.upper_identifier,
        optional($.type_parameters),
        "=",
        $._type_body,
        optional($.where_clause)
      ),

    type_parameters: ($) =>
      seq("<", commaSep1($.upper_identifier), ">"),

    _type_body: ($) =>
      choice($.variant_list, $.record_type, $._type_expression),

    variant_list: ($) =>
      seq(optional("|"), $.variant, repeat(seq("|", $.variant))),

    variant: ($) =>
      seq(
        $.upper_identifier,
        optional(seq("(", commaSep1($._type_expression), ")"))
      ),

    record_type: ($) =>
      seq(
        "{",
        optional(seq(commaSep1($.record_field), optional(","))),
        optional($.row_extension),
        "}"
      ),

    record_field: ($) =>
      seq(
        $.lower_identifier,
        ":",
        $._type_expression,
        optional($.refinement)
      ),

    row_extension: ($) => seq("..", $.lower_identifier),

    refinement: ($) => seq("where", $._expression),

    where_clause: ($) => seq("where", alias($._expression, $.refinement)),

    // Effect declarations
    function_declaration: ($) =>
      seq(
        repeat($.attribute),
        optional("export"),
        choice($.lower_identifier, $.effectful_identifier),
        optional($.type_annotation),
        optional(choice($.lower_identifier, $.effectful_identifier)),  // Repeated name (ML-style)
        "=",
        $._expression,
        optional($.function_where_clause)
      ),

    type_annotation: ($) => seq(":", $._type_expression),

    function_where_clause: ($) =>
      seq("where", repeat1(choice($.test_block, $.property_block))),

    test_block: ($) =>
      seq("test", $.string_literal, "=", $._expression),

    property_block: ($) =>
      seq("property", $.string_literal, "=", $._expression),

    // Specification declarations
    _type_expression: ($) =>
      choice(
        $.primitive_type,
        $.type_identifier,
        $.generic_type,
        $.function_type,
        $.tuple_type,
        $.record_type,
        $.optional_type,
        $.result_type,
        $.effect_type,
        seq("(", $._type_expression, ")")
      ),

    primitive_type: ($) =>
      choice("Bool", "Int", "Float", "Char", "String", "Unit", "Never"),

    type_identifier: ($) => /[A-Z][a-zA-Z0-9_]*/,

    generic_type: ($) =>
      prec(PREC.CALL, seq($.upper_identifier, "<", commaSep1($._type_expression), ">")),

    function_type: ($) =>
      prec.right(
        seq(
          optional($.effect_set),
          $._type_expression,
          "->",
          $._type_expression
        )
      ),

    tuple_type: ($) =>
      seq("(", commaSep($._type_expression), ")"),

    optional_type: ($) =>
      prec(PREC.POSTFIX, seq($._type_expression, "?")),

    result_type: ($) =>
      prec.left(PREC.POSTFIX, seq($._type_expression, "!", optional($._type_expression))),

    effect_type: ($) =>
      seq($.effect_set, $._type_expression),

    effect_set: ($) =>
      seq("{", commaSep1($.effect_reference), "}"),

    effect_reference: ($) =>
      seq($.upper_identifier, optional(seq(".", $.lower_identifier))),

    // =========================================================================
    // Expressions
    // =========================================================================

    _expression: ($) =>
      choice(
        $._primary_expression,
        $.unary_expression,
        $.binary_expression,
        $.postfix_expression,
        $.pipe_expression,
        $.if_expression,
        $.match_expression,
        $.let_expression,
        $.block_expression,
        $.lambda_expression,
        $.for_expression,
        $.try_expression
      ),

    integer_literal: ($) =>
      token(
        choice(
          seq(optional("-"), /[0-9]/, repeat(/[0-9_]/)),
          seq("0x", /[0-9a-fA-F]/, repeat(/[0-9a-fA-F_]/)),
          seq("0b", /[01]/, repeat(/[01_]/)),
          seq("0o", /[0-7]/, repeat(/[0-7_]/)
          )
        )
      ),

    string_literal: ($) =>
      choice(
        $._simple_string,
        $._raw_string,
        $._multiline_string
      ),

    _simple_string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
        '"'
      ),

    _raw_string: ($) =>
      choice(
        seq('r"', /[^"]*/, '"'),
        seq('r#"', /[^"#]*/, '"#')
      ),

    _multiline_string: ($) =>
      seq(
        '"""',
        repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
        '"""'
      ),

    interpolation: ($) =>
      seq($.interpolation_start, $._expression, "}"),

    lower_identifier: ($) => /[a-z_][a-zA-Z0-9_]*/,

    upper_identifier: ($) => /[A-Z][a-zA-Z0-9_]*/,

    effectful_identifier: ($) => /[a-z_][a-zA-Z0-9_]*!/,

    qualified_identifier: ($) =>
      prec(PREC.FIELD, seq(
        $.upper_identifier,
        repeat1(seq(".", choice($.lower_identifier, $.upper_identifier, $.effectful_identifier)))
      )),

    // Compound expressions
    binary_expression: ($) =>
      choice(
        prec.left(PREC.OR, seq($._expression, "||", $._expression)),
        prec.left(PREC.AND, seq($._expression, "&&", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, choice("==", "!=", "<", ">", "<=", ">="), $._expression)),
        prec.left(PREC.CONCAT, seq($._expression, "++", $._expression)),
        prec.left(PREC.ADD, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.MUL, seq($._expression, choice("*", "/", "%"), $._expression)),
        prec.right(PREC.EXP, seq($._expression, "**", $._expression)),
        prec.left(PREC.COMPARE, seq($._expression, "??", $._expression))
      ),

    call_expression: ($) =>
      prec.left(PREC.CALL, seq(
        $._expression,
        "(",
        optional(commaSep1($.argument)),
        ")"
      )),

    argument: ($) =>
      choice(
        $._expression,
        seq($.lower_identifier, ":", $._expression),
        "_"
      ),

    field_expression: ($) =>
      prec.left(PREC.FIELD, seq(
        $._expression,
        ".",
        choice($.lower_identifier, $.integer_literal)
      )),

    // Control flow
    let_expression: ($) =>
      prec.right(seq(
        "let",
        $._pattern,
        optional($.type_annotation),
        "=",
        $._expression,
        optional(seq("in", $._expression))
      )),

    block_expression: ($) =>
      seq("{", repeat($._block_statement), optional($._expression), "}"),

    _block_statement: ($) =>
      choice(
        seq($.let_expression, ";"),
        seq($._expression, ";")
      ),

    lambda_expression: ($) =>
      prec.right(seq(
        "|",
        optional(commaSep1($.lambda_parameter)),
        "|",
        optional(seq("->", $._type_expression)),
        choice($._expression, $.block_expression)
      )),

    lambda_parameter: ($) =>
      choice(
        $._pattern,
        seq($.lower_identifier, ":", $._type_expression)
      ),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.literal_pattern,
        $.identifier_pattern,
        $.tuple_pattern,
        $.list_pattern,
        $.record_pattern,
        $.variant_pattern,
        $.or_pattern,
        $.parenthesized_pattern
      ),

    identifier_pattern: ($) => $.lower_identifier,
