crates/tree-sitter-rocket/test/corpus/functions.txt
================================================================================
Simple function declaration
================================================================================

greet = |name| "Hello, ${name}"

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (string_literal
        (string_content)
        (interpolation
          (interpolation_start)
          (lower_identifier))))))

================================================================================
Function with type annotation
================================================================================

add : (Int, Int) -> Int
add = |a, b| a + b

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (type_annotation
      (function_type
        (tuple_type
          (primitive_type)
          (primitive_type))
        (primitive_type)))
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (binary_expression
        (lower_identifier)
        (lower_identifier)))))

================================================================================
Generic function
================================================================================

identity : T -> T
identity = |x| x

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (type_annotation
      (function_type
        (type_identifier)
        (type_identifier)))
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (lower_identifier))))

================================================================================
Effectful function
================================================================================

fetch_user! : Id -> {Http, Log} User?
fetch_user! = |id| {
  Log.debug!("Fetching user ${id}");
  Http.get!("/users/${id}")
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (effectful_identifier)
    (type_annotation
      (function_type
        (type_identifier)
        (effect_type
          (effect_set
            (effect_reference
              (upper_identifier))
            (effect_reference
              (upper_identifier)))
          (optional_type
            (type_identifier)))))
    (effectful_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (block_expression
        (call_expression
          (qualified_identifier
            (upper_identifier)
            (effectful_identifier))
          (argument
            (string_literal
              (string_content)
              (interpolation
                (interpolation_start)
                (lower_identifier)))))
        (call_expression
          (qualified_identifier
            (upper_identifier)
            (effectful_identifier))
          (argument
            (string_literal
              (string_content)
              (interpolation
                (interpolation_start)
                (lower_identifier)))))))))

================================================================================
Function with multiple statements
================================================================================

process = |input| {
  let validated = validate(input);
  let transformed = transform(validated);
  save(transformed)
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (block_expression
        (let_expression
          (identifier_pattern
            (lower_identifier))
          (call_expression
            (lower_identifier)
            (argument
              (lower_identifier))))
        (let_expression
          (identifier_pattern
            (lower_identifier))
          (call_expression
            (lower_identifier)
            (argument
              (lower_identifier))))
        (call_expression
          (lower_identifier)
          (argument
            (lower_identifier)))))))

================================================================================
Function with inline tests
================================================================================

add : (Int, Int) -> Int
add = |a, b| a + b
where
  test "basic addition" = add(1, 2) == 3
  property "commutative" = |a: Int, b: Int| add(a, b) == add(b, a)

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (type_annotation
      (function_type
        (tuple_type
          (primitive_type)
          (primitive_type))
        (primitive_type)))
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (binary_expression
        (lower_identifier)
        (lower_identifier)))
    (function_where_clause
      (test_block
        (string_literal
          (string_content))
        (binary_expression
          (call_expression
            (lower_identifier)
            (argument
              (integer_literal))
            (argument
              (integer_literal)))
          (integer_literal)))
      (property_block
        (string_literal
          (string_content))
        (lambda_expression
          (lambda_parameter
            (lower_identifier)
            (primitive_type))
          (lambda_parameter
            (lower_identifier)
            (primitive_type))
          (binary_expression
            (call_expression
              (lower_identifier)
              (argument
                (lower_identifier))
              (argument
                (lower_identifier)))
            (call_expression
              (lower_identifier)
              (argument
                (lower_identifier))
              (argument
                (lower_identifier)))))))))

================================================================================
Export function
================================================================================

export greet : String -> String
greet = |name| "Hello, ${name}"

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (lower_identifier)
    (type_annotation
      (function_type
        (primitive_type)
        (primitive_type)))
    (lower_identifier)
    (lambda_expression
      (lambda_parameter
        (identifier_pattern
          (lower_identifier)))
      (string_literal
        (string_content)
        (interpolation
          (interpolation_start)
          (lower_identifier))))))
