crates/tree-sitter-rocket/test/corpus/types.txt
================================================================================
Primitive types
================================================================================

type MyBool = Bool
type MyInt = Int
type MyFloat = Float
type MyChar = Char
type MyString = String
type MyUnit = Unit

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type)))

================================================================================
Type alias
================================================================================

type UserId = Int
type Email = String

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (primitive_type))
  (type_declaration
    (upper_identifier)
    (primitive_type)))

================================================================================
Generic type alias
================================================================================

type Pair<A, B> = (A, B)
type Handler<T> = Request -> Response<T>

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (type_parameters
      (upper_identifier)
      (upper_identifier))
    (tuple_type
      (type_identifier)
      (type_identifier)))
  (type_declaration
    (upper_identifier)
    (type_parameters
      (upper_identifier))
    (function_type
      (type_identifier)
      (generic_type
        (upper_identifier)
        (type_identifier)))))

================================================================================
Sum type (enum)
================================================================================

type Option<T> =
  | Some(T)
  | None

type Result<T, E> =
  | Ok(T)
  | Err(E)

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (type_parameters
      (upper_identifier))
    (variant_list
      (variant
        (upper_identifier)
        (type_identifier))
      (variant
        (upper_identifier))))
  (type_declaration
    (upper_identifier)
    (type_parameters
      (upper_identifier)
      (upper_identifier))
    (variant_list
      (variant
        (upper_identifier)
        (type_identifier))
      (variant
        (upper_identifier)
        (type_identifier)))))

================================================================================
Sum type without leading pipe
================================================================================

type Status = Active | Inactive | Pending

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (variant_list
      (variant
        (upper_identifier))
      (variant
        (upper_identifier))
      (variant
        (upper_identifier)))))

================================================================================
Record type
================================================================================

type User = {
  name: String,
  age: Int,
  email: String,
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (record_type
      (record_field
        (lower_identifier)
        (primitive_type))
      (record_field
        (lower_identifier)
        (primitive_type))
      (record_field
        (lower_identifier)
        (primitive_type)))))

================================================================================
Record type with row extension
================================================================================

type Named = { name: String, ..rest }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (record_type
      (record_field
        (lower_identifier)
        (primitive_type))
      (row_extension
        (lower_identifier)))))

================================================================================
Refinement type
================================================================================

type Port = Int where 1 <= self <= 65535
type NonEmpty<T> = List<T> where self.len > 0

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (primitive_type)
    (where_clause
      (refinement
        (binary_expression
          (binary_expression
            (integer_literal)
            (lower_identifier))
          (integer_literal)))))
  (type_declaration
    (upper_identifier)
    (type_parameters
      (upper_identifier))
    (generic_type
      (upper_identifier)
      (type_identifier))
    (where_clause
      (refinement
        (binary_expression
          (field_expression
            (lower_identifier)
            (lower_identifier))
          (integer_literal))))))

================================================================================
Function type
================================================================================

type Transform = Int -> String
type BinaryOp = (Int, Int) -> Int

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (function_type
      (primitive_type)
      (primitive_type)))
  (type_declaration
    (upper_identifier)
    (function_type
      (tuple_type
        (primitive_type)
        (primitive_type))
      (primitive_type))))

================================================================================
Optional and result types
================================================================================

type MaybeInt = Int?
type IntResult = Int!Error
type DefaultResult = Int!

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (optional_type
      (primitive_type)))
  (type_declaration
    (upper_identifier)
    (result_type
      (primitive_type)
      (type_identifier)))
  (type_declaration
    (upper_identifier)
    (result_type
      (primitive_type))))

================================================================================
Export type
================================================================================

export type User = {
  name: String,
  age: Int,
}

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (upper_identifier)
    (record_type
      (record_field
        (lower_identifier)
        (primitive_type))
      (record_field
        (lower_identifier)
        (primitive_type)))))
